grammar.js
    program: $ => repeat($._toplevel_statement),

    _toplevel_statement: $ => choice(
      $.statement,
      $.preproc_if,
      $.preproc_ifdef,
      $.preproc_ifndef,
      $.preproc_include,
      $.preproc_def,
      $.preproc_undef,
      $.preproc_error,
      $.preproc_function_def,
    ),

    decimal_integer_literal: _ => token(seq(
      DIGITS,
      optional(choice('l', 'L')),
    )),

    hex_integer_literal: _ => token(seq(
      choice('0x', '0X'),
      HEX_DIGITS,
      optional(choice('l', 'L')),
    )),

    decimal_floating_point_literal: _ => token(choice(
      seq(DECIMAL_DIGITS, '.', optional(DECIMAL_DIGITS), optional(seq((/[eE]/), optional(choice('-', '+')), DECIMAL_DIGITS)), optional(/[fFdD]/)),
      seq('.', DECIMAL_DIGITS, optional(seq((/[eE]/), optional(choice('-', '+')), DECIMAL_DIGITS)), optional(/[fFdD]/)),
      seq(DIGITS, /[eEpP]/, optional(choice('-', '+')), DECIMAL_DIGITS, optional(/[fFdD]/)),
      seq(DIGITS, optional(seq((/[eE]/), optional(choice('-', '+')), DECIMAL_DIGITS)), (/[fFdD]/)),
    )),

    null_literal: _ => 'null',

    // Expressions

    typed_expression: $ => prec.right(-100, seq(
      field('left', $._unannotated_type),
      field('right', $.identifier),
    )),

    cast_expression: $ => prec(PREC.CAST, choice(
      seq(
        field('value', $.expression),
        'as',
        field('type', $._unannotated_type),
        // optional(seq('.', $.expression)),
      ),
    )),


    assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
      field('left', choice(
        $.identifier,
        $.field_access,
        $.string_splice_expression,
        $.assignment_array_assignment,
        $.array_access,
      )),
      field('operator', choice('=', '+=', '_=', '-=', '*=', '/=', '&=', '|=', '^=', '%=', '<<=', '>>=', '>>>=')),
      field('right', $.expression),
    )),

    binary_expression: $ => choice(
      ...[
        ['>', PREC.REL],
        ['<', PREC.REL],
        ['>=', PREC.REL],
        ['<=', PREC.REL],
        ['==', PREC.EQUALITY],
        ['!=', PREC.EQUALITY],
        ['&&', PREC.AND],
        ['||', PREC.OR],
        ['+', PREC.ADD],
        ['_', PREC.ADD],
        ['-', PREC.ADD],
        ['*', PREC.MULT],
        ['/', PREC.MULT],
        ['&', PREC.BIT_AND],
        ['|', PREC.BIT_OR],
        ['^', PREC.BIT_XOR],
        ['^=', PREC.BIT_XOR],
        ['%', PREC.MULT],
        ['<<', PREC.SHIFT],
        ['>>', PREC.SHIFT],
        ['>>>', PREC.SHIFT],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field('left', $.expression),
          // @ts-ignore
          field('operator', operator),
          field('right', $.expression),
        )),
      )),

    lambda_expression: $ => seq(
      '&',
      $._unannotated_type,
      field('parameters', choice(
        $.identifier, $.formal_parameters,
      )),
      field('body', choice($.expression, $.block)),
    ),

    pointer_identifier: $ => seq(
      '&',
      $.identifier,
    ),

    parenthesized_expression: $ => seq('(', $.expression, ')'),


    field_access: $ => seq(
      field('object', $.primary_expression),
      seq('.', field('ptr', optional('&'))),
      field('field', choice($.identifier, $.this)),
    ),

    method_invocation: $ => prec(1, seq(
      choice(
        field('name', $.array_access),
        field('name', $.method_invocation),
        field('name', $.parenthesized_expression),
        field('name',
          choice(
            $.identifier,
            alias('str', $.identifier),
            alias('int', $.identifier),
            alias('long', $.identifier),
            alias('float', $.identifier),
            alias('double', $.identifier),
            alias('bool', $.identifier),
            alias('byte', $.identifier),
          )),
        seq(
          field('object', $.primary_expression),
          '.',
          field('type_arguments', optional($.type_arguments)),
          field('name', $.identifier),
        ),
      ),
      field('arguments', $.argument_list),
    )),

    argument_list: $ => seq('(', commaSep($.expression), ')'),

    block: $ => seq(
      '{', repeat(choice(
        $.statement,
        alias($.preproc_if_in_block, $.preproc_if),
        alias($.preproc_ifdef_in_block, $.preproc_ifdef),
        alias($.preproc_ifndef_in_block, $.preproc_ifndef),
      )),
      '}',
    ),

    expression_statement: $ => seq(
      $.expression,
      ';',
    ),

    return_statement: $ => seq(
      'return',
      optional(repeat($.expression)),
      optional(alias($.preproc_if_in_return_statement, $.preproc_if)),
      optional(alias($.preproc_ifdef_in_return_statement, $.preproc_ifdef)),
      optional(alias($.preproc_ifndef_in_return_statement, $.preproc_ifndef)),
      ';',
    ),

    if_statement: $ => prec.right(seq(
      'if',
      field('condition', $.parenthesized_expression),
      field('consequence', $.statement),
      optional(seq('else', field('alternative', $.statement))),
      optional(alias($.preproc_if_in_if_statement, $.preproc_if)),
      optional(alias($.preproc_ifdef_in_if_statement, $.preproc_ifdef)),
      optional(alias($.preproc_ifndef_in_if_statement, $.preproc_ifndef)),
    )),

    class_declaration: $ => seq(
      optional($.modifiers),
      'class',
      field('name', $.identifier),
      optional(seq(':', field('underlying_type', $._unannotated_type))),
      optional(field('type_parameters', $.type_parameters)),
      optional(field('superclass', $.superclass)),
      optional(field('interfaces', $.super_interfaces)),
      field('body', $.class_body),
    ),

    modifiers: $ => repeat1(choice(
      'public',
      'protected',
      'private',
      'abstract',
      'final',
      'native',
    )),

    type_parameters: $ => seq(
      '<', commaSep1($.type_parameter), '>',
    ),

    type_parameter: $ => seq(
      alias($.identifier, $.type_identifier),
      $.identifier,
    ),

    class_body: $ => seq(
      '{',
      repeat(choice(
        $._class_body_declaration,
        alias($.preproc_if_in_class_body, $.preproc_if),
        alias($.preproc_ifdef_in_class_body, $.preproc_ifdef),
        alias($.preproc_ifndef_in_class_body, $.preproc_ifndef),
      )),
      '}',
    ),

    _class_body_declaration: $ => choice(
      $.field_declaration,
      $.method_declaration,
      $.method_signature_declaration,
      $.class_declaration,
      $.interface_declaration,
      $.enum_declaration,
      $.block,
      $.array_of,
      $.constructor_declaration,
      ';',
    ),

    field_declaration: $ => seq(
      optional('const'),
      optional($.modifiers),
      optional($.ptr_type),
      choice(field('type', $._unannotated_type), $.amazin_void_type),
      $._variable_declarator_list,
      ';',
    ),

    interface_declaration: $ => prec.right(seq(
      optional(field('type', $.modifiers)),
      'interface',
      field('name', $.identifier),
      choice(
        optional(seq(':', field('parent_interface', $._unannotated_type))),
        optional($.type_parameters),
      ),
      choice(field('body', $.interface_body), ';'),
    )),

    interface_body: $ => seq(
      '{',
      repeat(choice(
        $.method_interface,
        prec.right(10, $.get_declaration),
        prec.right(10, $.set_declaration),
        alias($.preproc_if_in_interface_body, $.preproc_if),
        alias($.preproc_ifdef_in_interface_body, $.preproc_ifdef),
        alias($.preproc_ifndef_in_interface_body, $.preproc_ifndef),
        ';',
      )),
      '}',
    ),

    get_declaration: $ => seq(
      field('type', $._unannotated_type),
      seq(field('name', $.identifier), optional($.typed_array)),
      ';',
    ),

    set_declaration: $ => seq(
      seq(optional($._unannotated_type), field('name', $.identifier), optional($.typed_array)),
      '=',
      field('type', choice($._unannotated_type, $.expression)),
      ';',
    ),

    typed_array: $ => seq(
      '[',
      commaSep(
        seq(
          field('type', $._unannotated_type),
          optional($.identifier),
        ),
      ),
      ']',
    ),

    array_of: $ => seq(
      seq(
        field('type', $._unannotated_type),
        choice(field('array', '[]'), field('ptr_array', '*[]')),
        field('name', $.identifier),
      ),
    ),

    _variable_declarator_list: $ => commaSep1(
      field('declarator', $.variable_declarator),
    ),

    variable_declarator: $ => seq(
      $._variable_declarator_id,
      optional(seq('=', optional($.variable_cast), field('value', $._variable_initializer))),
    ),

    _variable_declarator_id: $ => prec(1, seq(
      field('name', $.identifier),
    )),

    _variable_initializer: $ => choice(
      $.expression,
    ),

    _unannotated_type: $ => choice(
      $._simple_type,
      prec(1, $.void_type),
    ),

    amazin_void_type: $ => prec(-1, seq(
      field('amazing_type', $._simple_type),
      '(',
      commaSep($.formal_parameter),
      ')',
    )),

    _simple_type: $ => choice(
      $.void_type,
      $.integral_type,
      $.floating_point_type,
      $.fix_type,
      $.str_type,
      $.boolean_type,
      alias($.identifier, $.type_identifier),
    ),

    integral_type: _ => choice(
      'byte',
      'int',
      'long',
    ),

    floating_point_type: _ => choice(
      'float',
      'double',
    ),

    boolean_type: _ => 'bool',

    void_type: _ => 'void',

    ptr_type: _ => 'ptr',

    str_type: _ => 'str',

    fix_type: _ => 'fix',

    formal_parameters: $ => seq(
      '(',
      seq(
        optional($.receiver_parameter),
        commaSep(choice($.formal_parameter)),
      ),
      ')',
    ),

    formal_parameter: $ => seq(
      optional(choice(
        seq(
          optional($.modifiers),
          field('type', $._unannotated_type),
        ),
        $.amazin_void_type,
      )),
      choice($._variable_declarator_id, field('type', $._unannotated_type)),
    ),

    receiver_parameter: $ => seq(
      $.this,
    ),

    local_variable_declaration: $ => prec(100, choice(
      seq(
        choice($.identifier,
          alias('str', $.identifier),
          alias('int', $.identifier),
          alias('long', $.identifier),
          alias('float', $.identifier),
          alias('double', $.identifier),
          alias('bool', $.identifier),
        ),
        field('accepts', $.argument_list),
        $.variable_declarator,
      ),
      seq(
        seq(optional(field('native_type', 'native')), optional('const'), optional($.ptr_type), field('type', ($.amazin_void_type, $._unannotated_type))),
        optional(field('accepts', $.argument_list)),
        $._variable_declarator_list,
        ';',
      ),
    )),

    local_type_declaration: $ => seq(
      optional($.modifiers),
      'type',
      $.typed_variable_declarator_list,
      ';',
    ),

    typed_variable_declarator_list: $ => commaSep1(
      field('declarator', $.typed_variable_declarator),
    ),

    typed_variable_declarator: $ => seq(
      $._variable_declarator_id,
      choice(
        optional(seq('=', field('value', choice($.generic_type, $.typed_variable_initializer)))),
        optional(seq('=', 'event', field('value', seq(field('type', $._unannotated_type), field('arguments', $.formal_parameters))))),
      ),
    ),

    method_interface: $ => seq(
      seq(
        optional(field('type', $._unannotated_type)),
        seq(
          field('name', $.identifier),
          field('parameters', choice($.formal_parameters)),
        ),
      ),
      ';',
    ),

    method_declaration: $ => seq(
      optional($.modifiers),
      seq(
        optional(
          field('type_parameters', $.type_parameters),
        ),
        field('type', choice($._unannotated_type, $.amazin_void_type)),
        seq(
          field('name', $.identifier),
          field('parameters', $.formal_parameters),
        ),
      ),
      field('body', $.block),
    ),

    method_signature_declaration: $ => seq(
      optional($.modifiers),
      seq(
        optional(
          field('type_parameters', $.type_parameters),
        ),
        field('type', $._unannotated_type),
        seq(
          field('name', $.identifier),
          field('parameters', $.formal_parameters),
        ),
      ),
      ';',
    ),

    this: _ => 'this',

    // @ts-ignore
    identifier: _ => /[\p{XID_Start}_$][\p{XID_Continue}\u00A2_$]*/,
